syntax = "proto3";  
package SgridLogTrace;

import "google/protobuf/empty.proto";

option go_package = ".;protocol";

message LogTraceReq{
    string logServerName = 1; // 日志服务名
    string logHost = 2; // 日志服务所在主机
    int64  logGridId = 3; // 日志服务所在网格id
    string logType = 4; // 日志类型
    string logContent = 5; // 日志内容
    string createTime = 6; // 日志创建时间
    int64 logBytesLen = 7; // 日志字节长度
}

message basicResp {
    int32 code = 1;
    string message = 2;
}

service SgridLogTraceService {
    rpc LogTrace(LogTraceReq)returns(google.protobuf.Empty);
}
